--- a/app/views/credit_cards/_credentials.html.haml
+++ b/app/views/credit_cards/_credentials.html.haml
@@ -31,6 +31,6 @@
 
   .actions
     .col-md-6
-      = link_to 'Back', user_order_shippings_path, class: 'btn btn-default btn-block'
+      = link_to 'Back', order_shippings_path, class: 'btn btn-default btn-block'
     .col-md-6
       = f.submit 'Continue', class: 'btn btn-success btn-block'
