--- a/app/views/orders/index.html.haml
+++ b/app/views/orders/index.html.haml
@@ -44,7 +44,7 @@
                             $#{item.price * item.qty}
                       %tr.line
                         %td{colspan: 3}
-                          = link_to 'Continue checkout', edit_user_order_address_path(current_user, order), :class => "btn btn-success"
+                          = link_to 'Continue checkout', edit_order_address_path(order), :class => "btn btn-success"
                         %td.text-right
                           %strong
                             Subtotal
@@ -71,13 +71,13 @@
                     - @in_queue.each do |order|
                       %tr
                         %td
-                          = link_to order.id, user_order_path(current_user, order)
+                          = link_to order.id, order_path(order)
                         %td
                           = order.completed_date
                         %td
                           = number_to_currency(order.total_price)
                         %td
-                          = link_to 'view', user_order_path(current_user, order)        
+                          = link_to 'view', order_path(order)        
             %h3 Delivered
             %hr
               - if @delivered.empty?
@@ -96,10 +96,10 @@
                     - @delivered.each do |order|
                       %tr
                         %td
-                          = link_to order.id, user_order_path(current_user, order)
+                          = link_to order.id, order_path(order)
                         %td
                           = order.completed_date
                         %td
                           = number_to_currency(order.total_price)
                         %td
-                          = link_to 'view', user_order_path(current_user, order)
+                          = link_to 'view', order_path(order)
