--- a/app/views/shippings/_services.html.haml
+++ b/app/views/shippings/_services.html.haml
@@ -1,4 +1,4 @@
-= form_for [current_user, @order], method: :patch do |f|
+= form_for @order, method: :patch do |f|
   - if @order.errors.any?
     #error_explanation
       %h2= "#{pluralize(@order.errors.count, "error")} prohibited this order from being saved:"
@@ -15,6 +15,6 @@
 
   .actions
     .col-md-6
-      = link_to 'Back', edit_user_order_address_path, class: 'btn btn-default btn-block'
+      = link_to 'Back', edit_order_address_path, class: 'btn btn-default btn-block'
     .col-md-6
       = f.submit 'Continue', class: 'btn btn-success btn-block'
