Authenticate callbacks, items total fix

--- a/app/views/orders/_summary.html.haml
+++ b/app/views/orders/_summary.html.haml
@@ -1,7 +1,7 @@
 %p
   Item Total:
   %strong
-    = number_to_currency(Order.find(params[:order_id]).order_items.sum(:price))
+    = number_to_currency(Order.find(params[:order_id]).total_price)
 
 - unless Order.find(params[:order_id]).shipping.nil?
   %p
