--- a/app/views/checkout/payment.html.haml
+++ b/app/views/checkout/payment.html.haml
@@ -8,28 +8,28 @@
       %h2
         Shipping Address 
       %p
-        = @order.address.firstname
-        = @order.address.lastname
+        = @order.shipping_address.firstname
+        = @order.shipping_address.lastname
         %br
-        = @order.address.address
+        = @order.shipping_address.address
         %br
-        = @order.address.zipcode
+        = @order.shipping_address.zipcode
         %br
-        = @order.address.city
+        = @order.shipping_address.city
         %br
-        = @order.address.phone
+        = @order.shipping_address.phone
         %br
-        = Country.find(@order.address.country).name
+        = Country.find(@order.shipping_address.country).name
 
     .col-md-4.col-sm-4.text-center
       %h2
         Credentials
-      = form_for @user, url: wizard_path do |f|
-        - if @user.errors.any?
+      = form_for @order, url: wizard_path do |f|
+        - if @order.errors.any?
           #error_explanation.alert.alert-danger
-            %h4= "#{pluralize(@user.errors.count, "error")} prohibited this order from being saved:"
+            %h4= "#{pluralize(@order.errors.count, "error")} prohibited this order from being saved:"
             %ul
-              - @user.errors.full_messages.each do |msg|
+              - @order.errors.full_messages.each do |msg|
                 %li= msg
         = f.fields_for :credit_card do |ff|
           .form-group
@@ -39,10 +39,10 @@
             .row    
               .col-xs-6
                 = ff.label :expiration_month
-                = ff.collection_select :expiration_month, CreditCard.months, :to_s, :to_s, {:selected => @user.card.expiration_month || '01'}, :class => 'form-control'
+                = ff.collection_select :expiration_month, CreditCard.months, :to_s, :to_s, {}, :class => 'form-control'
               .col-xs-6
                 = ff.label :expiration_year
-                = ff.collection_select :expiration_year, CreditCard.years, :to_s, :to_s, {:selected => @user.card.expiration_year || Time.now.year.to_s}, :class => 'form-control'
+                = ff.collection_select :expiration_year, CreditCard.years, :to_s, :to_s, {}, :class => 'form-control'
           .form-group
             = ff.label :cvv
             .form-inline
