--- a/app/views/devise/registrations/_password.html.haml
+++ b/app/views/devise/registrations/_password.html.haml
@@ -1,6 +1,6 @@
 %h2
   Password
-= form_for @user, url: user_update_password_path, method: :patch  do |f|
+= form_for @user, url: {controller: 'registrations', action: 'update_password'}, method: :put  do |f|
   .form-group
     = f.label :current_password
     = f.text_field :current_password, class: 'form-control'
