--- a/app/views/checkout/_progress.html.haml
+++ b/app/views/checkout/_progress.html.haml
@@ -2,7 +2,7 @@
   = link_to 'Address', wizard_path(:billing), :class => "btn btn-primary"
 
   = link_to_unless @order.shipping_address.nil? || @order.shipping_address.new_record?, 'Delivery', wizard_path(:delivery), { :class => "btn btn-#{step != :billing && step != :shipping ? 'primary' : 'default'}" } do 
-    = link_to('Address', '#', {:class => "btn btn-#{step != :billing && step != :shipping ? 'primary' : 'default'}"})
+    = link_to('Delivery', '#', {:class => "btn btn-#{step != :billing && step != :shipping ? 'primary' : 'default'}"})
 
   = link_to_unless @order.shipping.nil?, 'Payment', wizard_path(:payment), { :class => "btn btn-#{step == :payment || step == :confirm ? 'primary' : 'default'}" } do 
     = link_to('Payment', '#', {:class => "btn btn-#{step == :payment || step == :confirm ? 'primary' : 'default'}"})
