--- a/app/views/orders/show.html.haml
+++ b/app/views/orders/show.html.haml
@@ -80,7 +80,7 @@
                 - @order.order_items.each do |item|
                   %tr
                     %td
-                      = image_tag(item.book.img)
+                      = image_tag(item.book.cover.url)
                     %td
                       = item.book.title
                     %td
