--- a/app/views/home/_carousel.html.haml
+++ b/app/views/home/_carousel.html.haml
@@ -5,7 +5,8 @@
         - @books.limit(4).each_with_index do |book, index|
           - if index == 0
             %li.active{"data-target" => "#carousel-example-generic", "data-slide-to" => index}
-          %li{"data-target" => "#carousel-example-generic", "data-slide-to" => index+1} 
+          - else
+            %li{"data-target" => "#carousel-example-generic", "data-slide-to" => index+1} 
       .carousel-inner
         - @books.limit(4).each_with_index do |book, index|             
           - if index == 0
@@ -16,13 +17,14 @@
                   = link_to 'Show', book_path(book), class: 'btn btn-success btn-lg'
                   %h3
                     = book.title
-          .item
-            .row.bestsellers
-              %img.img-responsive.center-block{:src => "#{book.cover.url}", :width => 300}
-              .carousel-caption
-                = link_to 'Show', book_path(book), class: 'btn btn-success btn-lg'
-                %h3
-                  = book.title
+          - else 
+            .item
+              .row.bestsellers
+                %img.img-responsive.center-block{:src => "#{book.cover.url}", :width => 300}
+                .carousel-caption
+                  = link_to 'Show', book_path(book), class: 'btn btn-success btn-lg'
+                  %h3
+                    = book.title
 
 
       %a.left.carousel-control.no-shadow{ :href => "#carousel-example-generic", "data-slide" => "prev" }
