--- a/app/views/authors/show.html.haml
+++ b/app/views/authors/show.html.haml
@@ -1,32 +1,6 @@
 .container
   .row
-    = render 'layouts/sidebar'
+    .col-md-3
+      = render 'categories/category'
     .col-md-9
-      .row
-        - @author.books.each do |book|
-          .col-sm-4.col-lg-4.col-md-4
-            .thumbnail
-              = image_tag book.cover.url
-              .caption
-                %h4.pull-right
-                  $#{book.price}
-                %h4.short
-                  = link_to book.title, book
-                - if !book.author.nil?
-                  %span.label.label-primary
-                    = link_to %Q(#{book.author.firstname} #{book.author.lastname}), author_path(book.author), class: 'author'
-                %p
-                  = book.description
-              .ratings
-                %p.pull-right
-                  = book.ratings.count
-                  reviews
-                %p
-                  - 5.times do |n|
-                    - if book.ratings.average(:rating).nil?
-                      Not rated yet
-                      - break
-                    - elsif book.ratings.average(:rating).ceil > n
-                      %span.glyphicon.glyphicon-star
-                    - else
-                      %span.glyphicon.glyphicon-star-empty
+      = render partial: 'books/book', collection: @books
