--- a/app/views/home/_carousel.html.haml
+++ b/app/views/home/_carousel.html.haml
@@ -6,7 +6,7 @@
           - if index == 0
             %li.active{"data-target" => "#carousel-example-generic", "data-slide-to" => index}
           - else
-            %li{"data-target" => "#carousel-example-generic", "data-slide-to" => index+1} 
+            %li{"data-target" => "#carousel-example-generic", "data-slide-to" => index} 
       .carousel-inner
         - @books.limit(4).each_with_index do |book, index|             
           - if index == 0
