--- a/app/views/home/_carousel.html.haml
+++ b/app/views/home/_carousel.html.haml
@@ -2,13 +2,13 @@
   .col-md-12
     #carousel-example-generic.carousel.slide{"data-ride" => "carousel"}
       %ol.carousel-indicators
-        - Book.bestsellers.limit(5).each_with_index do |book, index|
+        - Book.bestsellers(5).each_with_index do |book, index|
           - if index == 0
             %li.active{"data-target" => "#carousel-example-generic", "data-slide-to" => index}
           - else
             %li{"data-target" => "#carousel-example-generic", "data-slide-to" => index} 
       .carousel-inner
-        - Book.bestsellers.limit(5).each_with_index do |book, index|             
+        - Book.bestsellers(5).each_with_index do |book, index|             
           - if index == 0
             .item.active
               .row.bestsellers
