ability tests, fixes

--- a/app/views/books/index.html.haml
+++ b/app/views/books/index.html.haml
@@ -8,13 +8,14 @@
             %th Price
         %tbody
           - @books.each do |book|
-            %tr
-              %td
-                %h4
-                  = link_to book.title, book
-              %td
-                %h4
-                  = number_to_currency(book.price)
+            - if can? :read, book
+              %tr
+                %td
+                  %h4
+                    = link_to book.title, book
+                %td
+                  %h4
+                    = number_to_currency(book.price)
   .row
     .text-center
       = paginate @books
