--- a/app/views/orders/show.html.haml
+++ b/app/views/orders/show.html.haml
@@ -97,7 +97,7 @@
                       %br
                       Shipping:
                   %td
-                    = number_to_currency(@order.subtotal)
+                    = number_to_currency(@order.total_price - @order.shipping.costs)
                     %br
                     = number_to_currency(@order.shipping.costs) unless @order.shipping.nil?
                 %tr
