--- a/app/views/carts/show.html.haml
+++ b/app/views/carts/show.html.haml
@@ -51,7 +51,7 @@
                   = link_to 'Continue shopping', root_path, class: 'btn btn-primary btn-block'
                 .col-sm-1.col-sm-1.col-lg-2
                 .col-xs-12.col-sm-2.col-md-2.col-lg-2
-                  = text_field_tag 'coupon', nil, {class: 'form-control', placeholder: "#{Coupon.first.code} - 30%"}
+                  = text_field_tag 'coupon', nil, {class: 'form-control', placeholder: "A2016 - 30%"}
                 .col-xs-12.col-sm-2.col-md-2.col-lg-2
                   = submit_tag 'Update', class: 'btn btn-primary btn-block'
                 .col-xs-12.col-sm-2.col-md-2.col-lg-2
